--- a/app/static/html/home.html
+++ b/app/static/html/home.html
@@ -1,11 +1,12 @@
 
 <div layout-padding layout="row" flex >
      <div layout="column" layout-align="start center" flex ng-repeat="assembly in assemblyList">
-          <img src="static/images/{{assembly.photo}}" width="30%">
-          <div>{{assembly.name}}</div>
-          <div ng-repeat="item in assembly.data">{{item.title | limitTo:10}}</div>
+          <img ng-src="static/images/{{assembly.photo}}" width="30%">
+          <md-button class="md-raised" ng-click="openDialog($event, assembly.name)">{{assembly.name}}</md-button>
+          <div ng-repeat="item in assembly.data">{{item.title | limitTo:20}}</div>
      </div>
 
 </div>
+
 
 
