--- a/app/static/html/home.html
+++ b/app/static/html/home.html
@@ -1,37 +1,52 @@
+<div>
+     <img width="100%" src="static/images/description.jpg">
+</div>
 <div class="padding-5" layout="row" layout-align="center center">
      <md-button class="{{currentPage=='국회의원'? 'selected': ''}}" ng-click="changePage('국회의원')">국회의원</md-button>
      <md-button class="{{currentPage=='국회의원'? '': 'selected'}}" ng-click="changePage('행정가')">행정가</md-button>
 </div>
-<div layout-padding layout="row" ng-show="currentPage=='국회의원'">
-     <div>
-          <div>카테고리</div>
-          <div layout-padding>&nbsp;</div>
-          <div layout-padding>&nbsp;</div>
-          <md-button class="md-raised" width="150px" ng-click="filters.category = ''">전체보기</md-button>
-          <img layout-padding ng-src="static/images/{{categoryInfo.img}}" ng-click="filters.category = categoryName"  width="150px" layout="column" layout-align="center center" ng-repeat="(categoryName, categoryInfo) in categories">{{categoryName}}</img>
+<div layout-padding class="bg-color" ng-show="currentPage=='국회의원'">
+     <div layout="column" layout-align="center center">
+          <div align="center">
+               <img layout-padding src="static/images/all.png"  width="80px" ng-click="filters.category = ''">
+               <img layout-padding ng-src="static/images/{{categoryInfo.img}}" ng-click="filters.category = categoryName"  width="80px" layout-align="center center" ng-repeat="(categoryName, categoryInfo) in categories">{{categoryName}}</img>
+          </div>
+
      </div>
-     <div layout="column" layout-align="start center" flex ng-repeat="assembly in assemblyList">
-          <img ng-src="static/images/{{assembly.photo}}" width="40%">
-          <div layout-padding></div>
-          <!--<div>{{assembly.name}}</div>-->
-          <div class="md-raised" ng-mouseover="myStyle={'border': '1px solid black'}" ng-mouseleave="myStyle={'background-color':categories[item.category].color}"
-               ng-style="myStyle" style="background-color:{{categories[item.category].color}} !important;width: 150px;height: 5px;"
-               ng-click="openDialog($event, assembly.name, item)" ng-repeat="item in assembly.data | filter:filters">&nbsp;</div>
+     <div layout="row" layout-align="center start">
+          <div layout="column"  layout-align="start center" class="assembly-box"  ng-repeat="assembly in assemblyList">
+               <img ng-src="static/images/{{assembly.photo}}" width="150px">
+               <div layout-padding></div>
+               <!--<div>{{assembly.name}}</div>-->
+               <div class="md-raised" ng-mouseover="myStyle={'border': '1px solid black'}" ng-mouseleave="myStyle={'background-color':categories[item.category].color}"
+                    ng-style="myStyle" style="background-color:{{categories[item.category].color}} !important;width: 150px;height: 5px;"
+                    ng-click="openDialog($event, assembly.name, item)" ng-repeat="item in assembly.data | filter:filters">&nbsp;</div>
+          </div>
      </div>
+
+
 </div>
 
-<div layout-padding layout="row" ng-show="currentPage=='행정가'">
-     <div>
-          <div>카테고리</div>
-          <div layout-padding>&nbsp;</div>
-          <div layout-padding>&nbsp;</div>
-          <md-button class="md-raised" width="150px" ng-click="filters.category = ''">전체보기</md-button>
-          <img layout-padding ng-src="static/images/{{categoryInfo.img}}" ng-click="filters.category = categoryName"  width="150px" layout="column" layout-align="center center" ng-repeat="(categoryName, categoryInfo) in categories">{{categoryName}}</img>
+<div layout-padding class="bg-color" ng-show="currentPage=='행정가'">
+
+     <div layout="column" layout-align="center center">
+          <div align="center">
+               <img layout-padding src="static/images/all.png"  width="80px" ng-click="filters.category = ''">
+               <img layout-padding ng-src="static/images/{{categoryInfo.img}}" ng-click="filters.category = categoryName"  width="80px" layout-align="center center" ng-repeat="(categoryName, categoryInfo) in categories">{{categoryName}}</img>
+          </div>
+
      </div>
-     <div layout="column" layout-align="start center" flex ng-repeat="admin in administrators">
-          <img ng-src="static/images/{{admin.photo}}" width="30%">
-          <div>{{admin.name}}</div>
-          <div class="md-raised" style="background-color:{{categories[item.category].color}} !important;width: 150px;height: 5px;" ng-click="openDialog($event, admin.name, item)" ng-repeat="item in admin.data | filter:filters">&nbsp;</div>
+     <div layout="row" layout-align="center start">
+          <div layout="column"  layout-align="start center" class="assembly-box"  ng-repeat="admin in administrators">
+               <img ng-src="static/images/{{admin.photo}}" width="150px">
+               <div layout-padding></div>
+               <div>{{admin.name}}</div>
+               <!--<div class="md-raised" ng-mouseover="myStyle={'border': '1px solid black'}" ng-mouseleave="myStyle={'background-color':categories[item.category].color}"-->
+                    <!--ng-style="myStyle" style="background-color:{{categories[item.category].color}} !important;width: 150px;height: 5px;"-->
+                    <!--ng-click="openDialog($event, admin.name, item)" ng-repeat="item in admin.data | filter:filters">&nbsp;</div>-->
+          </div>
      </div>
+
+     <div layout="column" layout-align="start center"><h2>준비중입니다.</h2></div>
 </div>
 
